--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,17 @@
   "proxy": "http://localhost:8080",
   "homepage": "/",
   "dependencies": {
+    "@mantine/core": "^4.1.0",
+    "@mantine/form": "^4.1.0",
+    "@mantine/hooks": "^4.1.0",
+    "@mantine/notifications": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "tabler-icons-react": "^1.43.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
