--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This app will serve as a simple and clean task management app.",
   "main": "index.js",
   "scripts": {
-    "start": "cd client && npm run build && cd ../api && npm run start",
+    "start": "cd client && npm i && npm run build && cd ../api && npm i && npm run start",
     "startApi": "cd api && npm start",
     "startClient": "cd client && npm start",
     "dev": "concurrently \"npm:startApi\" \"npm:startClient\""
