--- a/package.json
+++ b/package.json
@@ -5,14 +5,45 @@
   "main": "index.js",
   "scripts": {
     "start": "cd client && npm i && npm run build && cd ../api && npm i && npm run start",
-    "startApi": "cd api && npm start",
+    "startApi": "node api/server.js",
     "startClient": "cd client && npm start",
+    "buildClient": "cd client && npm run build",
     "dev": "concurrently \"npm:startApi\" \"npm:startClient\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^7.0.0"
+    "concurrently": "^7.0.0",
+    "eslint": "^7.30.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-config-standard-react": "^11.0.1",
+    "standard": "^16.0.4"
+  },
+  "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "mongoose": "^6.2.9",
+    "morgan": "^1.10.0",
+    "@mantine/core": "^4.1.0",
+    "@mantine/form": "^4.1.0",
+    "@mantine/hooks": "^4.1.0",
+    "@mantine/notifications": "^4.1.0",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.0",
+    "tabler-icons-react": "^1.43.0",
+    "web-vitals": "^2.1.4"
   }
 }
