--- a/package.json
+++ b/package.json
@@ -17,14 +17,22 @@
     "concurrently": "^7.0.0",
     "eslint": "^7.30.0",
     "eslint-config-standard": "^16.0.3",
+    "eslint-config-standard-react": "^11.0.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-config-standard-react": "^11.0.1",
     "standard": "^16.0.4"
   },
   "dependencies": {
+    "@mantine/core": "^4.1.0",
+    "@mantine/dates": "^4.1.2",
+    "@mantine/form": "^4.1.0",
+    "@mantine/hooks": "^4.1.0",
+    "@mantine/notifications": "^4.1.0",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -32,13 +40,6 @@
     "helmet": "^4.6.0",
     "mongoose": "^6.2.9",
     "morgan": "^1.10.0",
-    "@mantine/core": "^4.1.0",
-    "@mantine/form": "^4.1.0",
-    "@mantine/hooks": "^4.1.0",
-    "@mantine/notifications": "^4.1.0",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
